suporte em outras paginas

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="Estilos/Geral.css" />
     <link rel="stylesheet" href="Estilos/index.css" media="all" />
     <link rel="shortcut icon" href="Imagens/favicon.ico" />
+    <script src="Script-js/index.js" defer></script>
     <script defer src="Script-js/script.js"></script>
-    <script defer src="Script-js/index.js"></script>
   </head>
   <body id="inicio">
     <header>
@@ -324,7 +324,7 @@
     </div>
     <a id="botão-voltar" href="#inicio" title="Voltar para o início">
       <img
-        class="botaofechar"
+
         id="img-botão-voltar"
         src="Imagens/setaCima.png"
         alt=""
