--- a/index.html
+++ b/index.html
@@ -112,18 +112,6 @@
             <p>Coleção criada por Beatriz</p>
           </div>
         </label>
-        <input type="checkbox" name="" id="btnNavFestas" checked />
-        <label
-          for="btnNavFestas"
-          tabindex="1"
-          class="imagem_exibição_nav"
-          style="background-image: url(Imagens/imagemcolecao5.jpg)"
-        >
-          <div class="escrita_exibição_imagem_nav">
-            <h1>Festas</h1>
-            <p>Coleção criada por Beatriz</p>
-          </div>
-        </label>
         <input type="checkbox" name="" id="btnNavAfro" checked />
         <label
           for="btnNavAfro"
@@ -199,87 +187,65 @@
         <div class="peca_home colecao_inverno">
           <div class="escrita_exibição_imagem_pecas">
             <h1>Exibir todas coleções</h1>
-            <p>Coleções criadas por Beatriz</p>
+            <p>Coleção de Inverno</p>
           </div>
         </div>
         <div class="peca_home colecao_inverno">
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas coleções</h1>
-            <p>Coleções criadas por Beatriz</p>
-          </div>
-        </div>
-        <div class="peca_home colecao_inverno">
-          <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas coleções</h1>
-            <p>Coleções criadas por Beatriz</p>
+            <h1>Exibir todas Coleção</h1>
+            <p>Coleção de Inverno</p>
           </div>
         </div>
         <div class="peca_home colecao_verao">
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas coleções</h1>
-            <p>Coleções criadas por Beatriz</p>
+            <h1>Exibir todas Coleção</h1>
+            <p>Coleção de Verão</p>
           </div>
         </div>
         <div class="peca_home colecao_verao">
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas coleções</h1>
-            <p>Coleções criadas por Beatriz</p>
-          </div>
-        </div>
-        <div class="peca_home colecao_verao">
-          <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas coleções</h1>
-            <p>Coleções criadas por Beatriz</p>
+            <h1>Exibir todas Coleção</h1>
+            <p>Coleção de Verão</p>
           </div>
         </div>
         <div class="peca_home colecao_outono">
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas coleções</h1>
-            <p>Coleções criadas por Beatriz</p>
+            <h1>Exibir todas Coleção</h1>
+            <p>Coleção de outono</p>
           </div>
         </div>
         <div class="peca_home colecao_outono">
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas coleções</h1>
-            <p>Coleções criadas por Beatriz</p>
+            <h1>Exibir todas Coleção</h1>
+            <p>Coleção de outono</p>
           </div>
         </div>
         <div class="peca_home colecao_primavera">
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas coleções</h1>
-            <p>Coleções criadas por Beatriz</p>
+            <h1>Exibir todas Coleção</h1>
+            <p>Coleção de primavera</p>
           </div>
         </div>
         <div class="peca_home colecao_primavera">
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas coleções</h1>
-            <p>Coleções criadas por Beatriz</p>
-          </div>
-        </div>
-        <div class="peca_home colecao_festas">
-          <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas coleções</h1>
-            <p>Coleções criadas por Beatriz</p>
-          </div>
-        </div>
-        <div class="peca_home colecao_festas">
-          <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas coleções</h1>
-            <p>Coleções criadas por Beatriz</p>
+            <h1>Exibir todas Coleção</h1>
+            <p>Coleção de primavera</p>
           </div>
         </div>
         <div class="peca_home colecao_afro">
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas coleções</h1>
-            <p>Coleções criadas por Beatriz</p>
+            <h1>Exibir todas Coleção</h1>
+            <p>Coleção Afro</p>
           </div>
         </div>
         <div class="peca_home colecao_afro">
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas coleções</h1>
-            <p>Coleções criadas por Beatriz</p>
+            <h1>Exibir todas Coleção</h1>
+            <p>Coleção Afro</p>
           </div>
         </div>
+       
+        
       </div>
     </main>
     <div id="avaliar_atendimento">
