criando botões de menu da area do usuario

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             alt="Botão de ir pro Usúario"
             title="Página inicial"
         /></a>
-        <a href="Artistas.html">
+        <a href="artistas.html">
           <img
             src="Imagens/artistaIcon.png"
             alt="Botão de ir pro Usúario"
@@ -41,7 +41,7 @@
             tabindex="1"
             title="Quem somos"
         /></a>
-        <div href="areaUsuário.html" id="botão_abrir_login">
+        <div id="botão_abrir_login">
           <img
             src="Imagens/userIcon.png"
             alt="Botão de ir pro Usúario"
