--- a/Quem somos.html
+++ b/Quem somos.html
@@ -22,7 +22,7 @@
             alt="Botão de ir pro Usúario"
             title="Página inicial"
         /></a>
-        <a href="Artistas.html">
+        <a href="artistas.html">
           <img
             src="Imagens/artistaIcon.png"
             alt="Botão de ir pro Usúario"
@@ -36,7 +36,7 @@
             tabindex="1"
             title="Quem somos"
         /></a>
-        <div href="areaUsuário.html" id="botão_abrir_login">
+        <div id="botão_abrir_login">
           <img
             src="Imagens/userIcon.png"
             alt="Botão de ir pro Usúario"
