--- a/areaUsuário.html
+++ b/areaUsuário.html
@@ -26,7 +26,7 @@
             alt="Botão de ir pro Usúario"
             title="Página inicial"
         /></a>
-        <a href="Artistas.html">
+        <a href="artistas.html">
           <img
             src="Imagens/artistaIcon.png"
             alt="Botão de ir pro Usúario"
@@ -40,7 +40,7 @@
             tabindex="1"
             title="Quem somos"
         /></a>
-        <div href="areaUsuário.html" id="botão_abrir_login">
+        <div href="areaUsuário.html" id="botão_abrir_login" onClick="window.location.reload(true)">
           <img
             src="Imagens/userIcon.png"
             alt="Botão de ir pro Usúario"
@@ -72,7 +72,13 @@
             style="visibility: hidden"
           />
         </section>
-        <section id="nav_opcoes_usuario"></section>
+        <section id="nav_opcoes_usuario">
+          <ul>
+            <li>Orçamento</li>
+            <li>2</li>
+            <li>3</li>
+          </ul>
+        </section>
       </section>
       <div id="container_orçamento">
         <div id="header_conteudo_usuario">
@@ -116,7 +122,7 @@
           <div id="container_tamanho_orcamento">
             <p for="#" style="color: rgb(115, 44, 196);">Tamanho: </p>
             <fieldset>  
-              <input type="radio" name="radio_tamanho_orcamento" id="RT1" required/>
+              <input type="radio" name="radio_tamanho_orcamento" id="RT1"/>
               <label class="label_tamanho_orcamento" for="RT1" style="margin-left: 0px;"> PP </label>
               <input type="radio" name="radio_tamanho_orcamento" id="RT2"/>
               <label class="label_tamanho_orcamento" for="RT2"> P </label>
