alterando a pagina Sobre nós

--- a/Quem somos.html
+++ b/Quem somos.html
@@ -113,7 +113,6 @@
       </div>
     </header>
     <main>
-
       <div id="caixa_login" style="display: none">
         <h1 style="display: inline">Login</h1>
         <label for="fechar_login">
@@ -167,8 +166,44 @@
         </form>
       </div>
       <h1>Tá Que Tá</h1>
-      <h2>Trabalhe Conosco!</h2>
-      <div id="foto_home"></div>
+      <h2>Sobre Nós!</h2>
+
+      <div id="container_cards">
+        <div id="container_card_logo">
+          <div
+          class="card_home"
+          id="card_home1"
+          style="background-image: url(Imagens/colagemlogos.jpg)"
+        ></div>
+        <div id="texto_card1">
+          <p>
+            A companhia <strong> "Tá que Tá" </strong> é uma organização com fins
+            lucrativos que busca implantar uma abordagem social e incorpora a si um
+            objetivo visando ampliar o olhar de sociedade e cultura ao redor de onde
+            as pessoas vivem.
+            Uma empresa que age de forma online como uma dropshipping atendendo aos
+            avanços e vivencias tecnológicas da atualidade, entregando praticidade e
+            qualidade em seu atendimento e forma de venda.
+            Buscando gerar mais emprego através da arte aos que vivem em
+            vulnerabilidade a empresa atende às ideias de duas ods tendo um papel na
+            meta de alcançar os objetivos globais estabelecidos.
+          </p>
+        </div>
+        </div>
+        <div id="container_ODS">
+          <div
+          class="card_home"
+          id="card_home2"
+          style="background-image: url(Imagens/ODS8.jpg)"
+        ></div>
+        <div
+          class="card_home"
+          id="card_home3"
+          style="background-image: url(Imagens/ODS9.jpg)"
+        ></div>
+        <p>As ods, objetivos globais sustentáveis para desenvolvimento e melhoramento da qualidade de vida dos seres vivos, nas quais foram baseadas a empresa são "emprego digno e crescimento econômico", referindo-se aos artistas que tem a possibilidade de uma geração de renda melhor, e "indústria, inovação e infraestrutura", fazendo menção a forma de organização, gerenciamento e venda da companhia, sendo respectivamente as ods 8 e 9 dos objetivos de desenvolvimento sustentável existentes.</p>
+        </div>
+      </div>
     </main>
     <div id="avaliar_atendimento">
       <h1>Avalie o atendimento!</h1>
