--- a/areaUsuário.html
+++ b/areaUsuário.html
@@ -16,6 +16,7 @@
   </head>
   <body id="inicio">
     <header>
+      <!--topo com navegação para outras pages-->
       <a href="Quem somos.html">
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
@@ -51,6 +52,7 @@
       </div>
     </header>
     <main>
+      <!--Menu lateral-->
       <section id="opções_usuário" style="width: 5%">
         <div id="opções_usuário_abrir_fechar" style="width: 100%">
           <img
@@ -80,6 +82,7 @@
           </ul>
         </section>
       </section>
+      <!--Page 1 - orçamento-->
       <div id="container_orçamento">
         <div id="header_conteudo_usuario">
           <p>Faça seu orçamento conosco!</p>
@@ -171,6 +174,7 @@
         </form>
       </div>
     </main>
+    <!--Avaliar suporte-->
     <div id="avaliar_atendimento">
       <h1>Avalie o atendimento!</h1>
       <div id="avaliar_emojis">
@@ -211,9 +215,11 @@
         />
       </div>
     </div>
+    <!--BOtão de ir para o topo-->
     <a id="botão-voltar" href="#inicio" title="Voltar para o início">
       <img id="img-botão-voltar" src="Imagens/setaCima.png" alt="" />
     </a>
+    <!-- Suporte-->
     <div id="Caixa_suporte" style="display: none">
       <h1>Suporte</h1>
       <img
@@ -243,13 +249,15 @@
         />
       </div>
     </div>
-
+    <!--Botão suporte-->
     <div id="botão-suporte" title="Suporte">
       <img id="img-botão-suporte" src="Imagens/suporteIcon.png" alt="" />
     </div>
+    <!--Creditos-->
+    <img id="creditos_toggle" src="Imagens/expandirCreditoIcon.png" alt="" title="Alterar visibilidade dos créditos">
     <footer>
       Criado por:
-      <a href="https://github.com/Vitorezy" target="_blank"> Vitorezy </a>
+      <a href="https://github.com/Vitorezy" target="_blank" style="height: 0%;"> Vitorezy </a>
     </footer>
   </body>
 </html>
