--- a/artistas.html
+++ b/artistas.html
@@ -16,9 +16,11 @@
   </head>
   <body id="inicio">
     <header>
+      <!--Topo da página-->
       <a href="Quem somos.html">
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
+      <!--links de acesso para outras páginas-->
       <div id="links_acesso">
         <a href="index.html">
           <img
@@ -49,6 +51,7 @@
           />
         </div>
       </div>
+      <!--Menu suspenso-->
       <nav tabindex="1" title="Clique para abrir/fechar">
         Filtrar por artista!
       </nav>
@@ -96,6 +99,7 @@
       </div>
     </header>
     <main>
+      <!--Login-->
       <div id="caixa_login" style="display: none">
         <h1 style="display: inline">Login</h1>
         <label for="fechar_login">
@@ -151,6 +155,7 @@
       <h1>Tá Que Tá</h1>
       <h2>Nossos Artistas</h2>
       <div id="flex-container">
+        <!--container com as caixas de cada artista-->
         <div id="artista1" style="background-image: url(Imagens/wallpaper.jpg)">
           <div class="autor-identificação">
             <img src="Imagens/usuário_icon_nav.png" alt="" />
@@ -225,8 +230,8 @@
           </div>
         </div>
       </div>
-    </div>
     </main>
+    <!--Avaliar atendimento-->
     <div id="avaliar_atendimento">
       <h1>Avalie o atendimento!</h1>
       <div id="avaliar_emojis">
@@ -267,9 +272,11 @@
         />
       </div>
     </div>
+    <!--Voltar ao topo-->
     <a id="botão-voltar" href="#inicio" title="Voltar para o início">
       <img id="img-botão-voltar" src="Imagens/setaCima.png" alt="" />
     </a>
+    <!--Suporte-->
     <div id="Caixa_suporte" style="display: none">
       <h1>Suporte</h1>
       <img
@@ -299,10 +306,17 @@
         />
       </div>
     </div>
-
+    <!--botão de chamar suporte-->
     <div id="botão-suporte" title="Suporte">
       <img id="img-botão-suporte" src="Imagens/suporteIcon.png" alt="" />
     </div>
+    <!--Creditos e botão de abrir/fechar creditos-->
+    <img
+      id="creditos_toggle"
+      src="Imagens/expandirCreditoIcon.png"
+      alt=""
+      title="Alterar visibilidade dos créditos"
+    />
     <footer>
       Criado por:
       <a href="https://github.com/Vitorezy" target="_blank"> Vitorezy </a>
