--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
   </head>
   <body id="inicio">
     <header>
+      <!--Logo-->
       <a href="Quem somos.html">
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
+      <!--Links de acesso para outras páginas-->
       <div id="links_acesso">
         <a href="index.html">
           <img
@@ -50,6 +52,7 @@
           />
         </div>
       </div>
+      <!--Nav com filtros para as peças da página-->
       <nav tabindex="1" title="Clique para abrir/fechar">Filtrar coleções!</nav>
       <div id="nav_aberta" style="height: 0%">
         <input type="checkbox" name="" id="btnNavTodas" checked />
@@ -127,6 +130,7 @@
       </div>
     </header>
     <main>
+      <!--Página de login-->
       <div id="caixa_login" style="display: none">
         <h1 style="display: inline">Login</h1>
         <label for="fechar_login">
@@ -181,7 +185,7 @@
       </div>
 
       <h1>Tá Que Tá</h1>
-
+      <!--peças na página inicial-->
       <h2 id="mensagem_selecao">Peças</h2>
       <div id="pecas_home_container">
         <div class="peca_home colecao_inverno">
@@ -244,10 +248,9 @@
             <p>Coleção Afro</p>
           </div>
         </div>
-       
-        
       </div>
     </main>
+    <!--página de avaliação de atendimento-->
     <div id="avaliar_atendimento">
       <h1>Avalie o atendimento!</h1>
       <div id="avaliar_emojis">
@@ -288,15 +291,11 @@
         />
       </div>
     </div>
+    <!--Botão de voltar ao inicio da página-->
     <a id="botão-voltar" href="#inicio" title="Voltar para o início">
-      <img
-
-        id="img-botão-voltar"
-        src="Imagens/setaCima.png"
-        alt=""
-      />
+      <img id="img-botão-voltar" src="Imagens/setaCima.png" alt="" />
     </a>
-
+    <!--Caixa de suporte-->
     <div id="Caixa_suporte" style="display: none">
       <h1>Suporte</h1>
       <img
@@ -330,6 +329,13 @@
     <div id="botão-suporte" title="Suporte">
       <img id="img-botão-suporte" src="Imagens/suporteIcon.png" alt="" />
     </div>
+    <!--Créditos-->
+    <img
+      id="creditos_toggle"
+      src="Imagens/expandirCreditoIcon.png"
+      alt=""
+      title="Alterar visibilidade dos créditos"
+    />
     <footer>
       Criado por:
       <a href="https://github.com/Vitorezy" target="_blank"> Vitorezy </a>
