criando item index detalhes

--- a/artistas.html
+++ b/artistas.html
@@ -103,7 +103,7 @@
       <div id="caixa_login" style="display: none">
         <h1 style="display: inline">Login</h1>
         <label for="fechar_login">
-          <img src="Imagens/fecharIcon.png" alt=""
+          <img class="botaofechar" src="Imagens/fecharIcon.png" alt=""
         /></label>
         <button id="fechar_login" style="display: none"></button>
         <form id="formulario" method="get" action="areaUsuário.html">
