--- a/index.html
+++ b/index.html
@@ -188,64 +188,86 @@
       <!--peças na página inicial-->
       <h2 id="mensagem_selecao">Peças</h2>
       <div id="pecas_home_container">
-        <div class="peca_home colecao_inverno">
-          <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas coleções</h1>
-            <p>Coleção de Inverno</p>
+        <div class="expanded_peca_home" name="1">
+          <div class="peca_home colecao_inverno" name="1">
+            <div class="escrita_exibição_imagem_pecas">
+              <h1>Exibir todas coleções</h1>
+              <p>Coleção de Inverno</p>
+            </div>
           </div>
         </div>
-        <div class="peca_home colecao_inverno">
-          <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas Coleção</h1>
-            <p>Coleção de Inverno</p>
+        <div class="expanded_peca_home" name="1">
+          <div class="peca_home colecao_inverno" name="1">
+            <div class="escrita_exibição_imagem_pecas">
+              <h1>Exibir todas Coleção</h1>
+              <p>Coleção de Inverno</p>
+            </div>
           </div>
         </div>
-        <div class="peca_home colecao_verao">
-          <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas Coleção</h1>
-            <p>Coleção de Verão</p>
+
+        <div class="expanded_peca_home" name="1">
+          <div class="peca_home colecao_verao" name="1">
+            <div class="escrita_exibição_imagem_pecas">
+              <h1>Exibir todas Coleção</h1>
+              <p>Coleção de Verão</p>
+            </div>
           </div>
         </div>
-        <div class="peca_home colecao_verao">
-          <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas Coleção</h1>
-            <p>Coleção de Verão</p>
+
+        <div class="expanded_peca_home" name="1">
+          <div class="peca_home colecao_verao" name="1">
+            <div class="escrita_exibição_imagem_pecas">
+              <h1>Exibir todas Coleção</h1>
+              <p>Coleção de Verão</p>
+            </div>
           </div>
         </div>
-        <div class="peca_home colecao_outono">
-          <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas Coleção</h1>
-            <p>Coleção de outono</p>
+        <div class="expanded_peca_home" name="1">
+          <div class="peca_home colecao_outono" name="1">
+            <div class="escrita_exibição_imagem_pecas">
+              <h1>Exibir todas Coleção</h1>
+              <p>Coleção de outono</p>
+            </div>
           </div>
         </div>
-        <div class="peca_home colecao_outono">
-          <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas Coleção</h1>
-            <p>Coleção de outono</p>
+        <div class="expanded_peca_home" name="1">
+          <div class="peca_home colecao_outono" name="1">
+            <div class="escrita_exibição_imagem_pecas">
+              <h1>Exibir todas Coleção</h1>
+              <p>Coleção de outono</p>
+            </div>
           </div>
         </div>
-        <div class="peca_home colecao_primavera">
-          <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas Coleção</h1>
-            <p>Coleção de primavera</p>
+        <div class="expanded_peca_home" name="1">
+          <div class="peca_home colecao_primavera" name="1">
+            <div class="escrita_exibição_imagem_pecas">
+              <h1>Exibir todas Coleção</h1>
+              <p>Coleção de primavera</p>
+            </div>
           </div>
         </div>
-        <div class="peca_home colecao_primavera">
-          <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas Coleção</h1>
-            <p>Coleção de primavera</p>
+        <div class="expanded_peca_home" name="1">
+          <div class="peca_home colecao_primavera" name="1">
+            <div class="escrita_exibição_imagem_pecas">
+              <h1>Exibir todas Coleção</h1>
+              <p>Coleção de primavera</p>
+            </div>
           </div>
         </div>
-        <div class="peca_home colecao_afro">
-          <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas Coleção</h1>
-            <p>Coleção Afro</p>
+        <div class="expanded_peca_home" name="1">
+          <div class="peca_home colecao_afro" name="1">
+            <div class="escrita_exibição_imagem_pecas">
+              <h1>Exibir todas Coleção</h1>
+              <p>Coleção Afro</p>
+            </div>
           </div>
         </div>
-        <div class="peca_home colecao_afro">
-          <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir todas Coleção</h1>
-            <p>Coleção Afro</p>
+        <div class="expanded_peca_home" name="1">
+          <div class="peca_home colecao_afro" name="1">
+            <div class="escrita_exibição_imagem_pecas">
+              <h1>Exibir todas Coleção</h1>
+              <p>Coleção Afro</p>
+            </div>
           </div>
         </div>
       </div>
