criando pagina de carrinho e seleção de itens

--- a/areaUsuário.html
+++ b/areaUsuário.html
@@ -126,15 +126,30 @@
             <p for="#" style="color: rgb(115, 44, 196);">Tamanho: </p>
             <fieldset>  
               <input type="radio" name="radio_tamanho_orcamento" id="RT1"/>
-              <label class="label_tamanho_orcamento" for="RT1" style="margin-left: 0px;"> PP </label>
+              <label class="label_tamanho_orcamento" for="RT1" style="margin-left: 0px;"> 
+                <div>
+                  PP
+                </div>  </label>
               <input type="radio" name="radio_tamanho_orcamento" id="RT2"/>
-              <label class="label_tamanho_orcamento" for="RT2"> P </label>
+              <label class="label_tamanho_orcamento" for="RT2">
+                <div>
+                  P
+                </div>  </label>
               <input type="radio" name="radio_tamanho_orcamento" id="RT3"/>
-              <label class="label_tamanho_orcamento" for="RT3"> M </label>
+              <label class="label_tamanho_orcamento" for="RT3"> 
+                <div>
+                  M
+                </div> </label>
               <input type="radio" name="radio_tamanho_orcamento" id="RT4"/>
-              <label class="label_tamanho_orcamento" for="RT4"> G </label>
+              <label class="label_tamanho_orcamento" for="RT4">
+                <div>
+                  G 
+                </div> </label>
               <input type="radio" name="radio_tamanho_orcamento" id="RT5"/>
-              <label class="label_tamanho_orcamento" for="RT5"> GG </label>
+              <label class="label_tamanho_orcamento" for="RT5">
+                <div>
+                  GG
+                </div>  </label>
             </fieldset>
           </div>
           <p for="#">Seleção de cores:</p>
