--- a/Quem somos.html
+++ b/Quem somos.html
@@ -18,13 +18,7 @@
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
       <!--Menu de acesso a outras páginas-->
-      <div id="links_acesso">
-        <a href="index.html">
-          <img
-            src="Imagens/homeIcon.png"
-            alt="Botão de ir pro Usúario"
-            title="Página inicial"
-        /></a>
+      <div class="links_acesso" style="right: 91%;">
         <a href="artistas.html">
           <img
             src="Imagens/artistaIcon.png"
@@ -38,6 +32,14 @@
             alt="Botão de ir pro Usúario"
             tabindex="1"
             title="Quem somos"
+        /></a>
+      </div>
+      <div class="links_acesso">
+        <a href="index.html">
+          <img
+            src="Imagens/homeIcon.png"
+            alt="Botão de ir pro Usúario"
+            title="Página inicial"
         /></a>
         <div id="botão_abrir_login">
           <img
@@ -118,7 +120,7 @@
             style="
               background-image: url(Imagens/colagemlogos.jpg);
               border-radius: 10px;
-              animation: girar_card1 1.3s 0.2s both normal;
+              animation: girar_card1 1.3s 0.2s 1 both normal;
               animation-play-state: paused;
             "
           ></div>
