--- a/artistas.html
+++ b/artistas.html
@@ -21,13 +21,7 @@
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
       <!--links de acesso para outras páginas-->
-      <div id="links_acesso">
-        <a href="index.html">
-          <img
-            src="Imagens/homeIcon.png"
-            alt="Botão de ir pro Usúario"
-            title="Página inicial"
-        /></a>
+      <div class="links_acesso" style="right: 91%">
         <a href="artistas.html">
           <img
             src="Imagens/artistaIcon.png"
@@ -42,6 +36,15 @@
             tabindex="1"
             title="Quem somos"
         /></a>
+      </div>
+      <div class="links_acesso">
+        <a href="index.html">
+          <img
+            src="Imagens/homeIcon.png"
+            alt="Botão de ir pro Usúario"
+            title="Página inicial"
+        /></a>
+
         <div id="botão_abrir_login">
           <img
             src="Imagens/userIcon.png"
