--- a/index.html
+++ b/index.html
@@ -22,13 +22,7 @@
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
       <!--Links de acesso para outras páginas-->
-      <div id="links_acesso">
-        <a href="index.html">
-          <img
-            src="Imagens/homeIcon.png"
-            alt="Botão de ir pro Usúario"
-            title="Página inicial"
-        /></a>
+      <div class="links_acesso" style="right: 91%;">
         <a href="artistas.html">
           <img
             src="Imagens/artistaIcon.png"
@@ -43,6 +37,22 @@
             tabindex="1"
             title="Quem somos"
         /></a>
+      </div>
+      <div class="links_acesso">
+        <a href="index.html">
+          <img
+            src="Imagens/homeIcon.png"
+            alt="Botão de ir pro Usúario"
+            title="Página inicial"
+        /></a>
+        <label for="submit_pecas">
+          <img
+            src="Imagens/carrinhoIcon.png"
+            alt=""
+            title="carrinho de compras"
+          />
+        </label>
+
         <div id="botão_abrir_login">
           <img
             src="Imagens/userIcon.png"
@@ -187,90 +197,149 @@
       <h1>Tá Que Tá</h1>
       <!--peças na página inicial-->
       <h2 id="mensagem_selecao">Peças</h2>
-      <div id="pecas_home_container">
-        <div class="expanded_peca_home" name="1">
-          <div class="peca_home colecao_inverno" name="1">
-            <div class="escrita_exibição_imagem_pecas">
-              <h1>Exibir todas coleções</h1>
-              <p>Coleção de Inverno</p>
-            </div>
+      <form method="get" action="carrinho.html" id="pecas_home_container">
+        <input type="checkbox" id="check1" />
+        <div class="peca_home colecao_inverno">
+          <div class="exibicao_hover_pecas">
+            <label for="check1">
+              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+            </label>
+            <p title="Tamanho">M</p>
+          </div>
+          <div class="escrita_exibição_imagem_pecas">
+            <div class="preco_peca">30R$</div>
+            <h1>Exibir coleções</h1>
+            <p>Coleção de Inverno</p>
           </div>
         </div>
-        <div class="expanded_peca_home" name="1">
-          <div class="peca_home colecao_inverno" name="1">
-            <div class="escrita_exibição_imagem_pecas">
-              <h1>Exibir todas Coleção</h1>
-              <p>Coleção de Inverno</p>
-            </div>
+        <input type="checkbox" id="check2" />
+        <div class="peca_home colecao_inverno">
+          <div class="exibicao_hover_pecas">
+            <label for="check2">
+              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+            </label>
+            <p title="Tamanho">M</p>
+          </div>
+          <div class="escrita_exibição_imagem_pecas">
+            <div class="preco_peca">35R$</div>
+            <h1>Exibir coleções</h1>
+            <p>Coleção de Inverno</p>
           </div>
         </div>
-
-        <div class="expanded_peca_home" name="1">
-          <div class="peca_home colecao_verao" name="1">
-            <div class="escrita_exibição_imagem_pecas">
-              <h1>Exibir todas Coleção</h1>
-              <p>Coleção de Verão</p>
-            </div>
+        <input type="checkbox" id="check3" />
+        <div class="peca_home colecao_verao">
+          <div class="exibicao_hover_pecas">
+            <label for="check3">
+              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+            </label>
+            <p title="Tamanho">M</p>
+          </div>
+          <div class="escrita_exibição_imagem_pecas">
+            <div class="preco_peca">20R$</div>
+            <h1>Exibir coleções</h1>
+            <p>Coleção de Verão</p>
           </div>
         </div>
-
-        <div class="expanded_peca_home" name="1">
-          <div class="peca_home colecao_verao" name="1">
-            <div class="escrita_exibição_imagem_pecas">
-              <h1>Exibir todas Coleção</h1>
-              <p>Coleção de Verão</p>
-            </div>
+        <input type="checkbox" id="check4" />
+        <div class="peca_home colecao_verao">
+          <div class="exibicao_hover_pecas">
+            <label for="check4">
+              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+            </label>
+            <p title="Tamanho">M</p>
+          </div>
+          <div class="escrita_exibição_imagem_pecas">
+            <div class="preco_peca">50R$</div>
+            <h1>Exibir coleções</h1>
+            <p>Coleção de Verão</p>
           </div>
         </div>
-        <div class="expanded_peca_home" name="1">
-          <div class="peca_home colecao_outono" name="1">
-            <div class="escrita_exibição_imagem_pecas">
-              <h1>Exibir todas Coleção</h1>
-              <p>Coleção de outono</p>
-            </div>
+        <input type="checkbox" id="check5" />
+        <div class="peca_home colecao_outono">
+          <div class="exibicao_hover_pecas">
+            <label for="check5">
+              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+            </label>
+            <p title="Tamanho">M</p>
+          </div>
+          <div class="escrita_exibição_imagem_pecas">
+            <div class="preco_peca">80R$</div>
+            <h1>Exibir coleções</h1>
+            <p>Coleção de outono</p>
           </div>
         </div>
-        <div class="expanded_peca_home" name="1">
-          <div class="peca_home colecao_outono" name="1">
-            <div class="escrita_exibição_imagem_pecas">
-              <h1>Exibir todas Coleção</h1>
-              <p>Coleção de outono</p>
-            </div>
+        <input type="checkbox" id="check6" />
+        <div class="peca_home colecao_outono">
+          <div class="exibicao_hover_pecas">
+            <label for="check6">
+              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+            </label>
+            <p title="Tamanho">M</p>
+          </div>
+          <div class="escrita_exibição_imagem_pecas">
+            <div class="preco_peca">30R$</div>
+            <h1>Exibir coleções</h1>
+            <p>Coleção de outono</p>
           </div>
         </div>
-        <div class="expanded_peca_home" name="1">
-          <div class="peca_home colecao_primavera" name="1">
-            <div class="escrita_exibição_imagem_pecas">
-              <h1>Exibir todas Coleção</h1>
-              <p>Coleção de primavera</p>
-            </div>
+        <input type="checkbox" id="check7" />
+        <div class="peca_home colecao_primavera">
+          <div class="exibicao_hover_pecas">
+            <label for="check7">
+              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+            </label>
+            <p title="Tamanho">M</p>
+          </div>
+          <div class="escrita_exibição_imagem_pecas">
+            <div class="preco_peca">50R$</div>
+            <h1>Exibir coleções</h1>
+            <p>Coleção de primavera</p>
           </div>
         </div>
-        <div class="expanded_peca_home" name="1">
-          <div class="peca_home colecao_primavera" name="1">
-            <div class="escrita_exibição_imagem_pecas">
-              <h1>Exibir todas Coleção</h1>
-              <p>Coleção de primavera</p>
-            </div>
+        <input type="checkbox" id="check8" />
+        <div class="peca_home colecao_primavera">
+          <div class="exibicao_hover_pecas">
+            <label for="check8">
+              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+            </label>
+            <p title="Tamanho">M</p>
+          </div>
+          <div class="escrita_exibição_imagem_pecas">
+            <div class="preco_peca">70R$</div>
+            <h1>Exibir coleções</h1>
+            <p>Coleção de primavera</p>
           </div>
         </div>
-        <div class="expanded_peca_home" name="1">
-          <div class="peca_home colecao_afro" name="1">
-            <div class="escrita_exibição_imagem_pecas">
-              <h1>Exibir todas Coleção</h1>
-              <p>Coleção Afro</p>
-            </div>
+        <input type="checkbox" id="check9" />
+        <div class="peca_home colecao_afro">
+          <div class="exibicao_hover_pecas">
+            <label for="check9">
+              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+            </label>
+            <p title="Tamanho">M</p>
+          </div>
+          <div class="escrita_exibição_imagem_pecas">
+            <div class="preco_peca">67R$</div>
+            <h1>Exibir coleções</h1>
+            <p>Coleção Afro</p>
           </div>
         </div>
-        <div class="expanded_peca_home" name="1">
-          <div class="peca_home colecao_afro" name="1">
-            <div class="escrita_exibição_imagem_pecas">
-              <h1>Exibir todas Coleção</h1>
-              <p>Coleção Afro</p>
-            </div>
+        <input type="checkbox" id="check10" />
+        <div class="peca_home colecao_afro">
+          <div class="exibicao_hover_pecas">
+            <label for="check10">
+              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+            </label>
+            <p title="Tamanho">M</p>
+          </div>
+          <div class="escrita_exibição_imagem_pecas">
+            <div class="preco_peca">10R$</div>
+            <h1>Exibir coleções</h1>
+            <p>Coleção Afro</p>
           </div>
         </div>
-      </div>
+        <input id="submit_pecas" type="submit" value="enviar" />
+      </form>
     </main>
     <!--página de avaliação de atendimento-->
     <div id="avaliar_atendimento">
